RESOLVED FIXED314524
[Site Isolation] `ResourceLoadStatistics.BackForwardPerPageData` fails
https://bugs.webkit.org/show_bug.cgi?id=314524
Summary [Site Isolation] `ResourceLoadStatistics.BackForwardPerPageData` fails
Charlie Wolfe
Reported 2026-05-10 21:14:50 PDT
...
Attachments
Charlie Wolfe
Comment 1 2026-05-10 21:14:51 PDT
Charlie Wolfe
Comment 2 2026-05-10 21:16:21 PDT
EWS
Comment 3 2026-05-13 14:16:35 PDT
Committed 313192@main (610ee4279928): <https://commits.webkit.org/313192@main> Reviewed commits have been landed. Closing PR #64651 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.