[Site Isolation] `ResourceLoadStatistics.BackForwardPerPageData` fails https://bugs.webkit.org/show_bug.cgi?id=314524 rdar://173034060

Reviewed by Rupin Mittal.

This test needed the following fixes to pass with site isolation:
 - Query and aggregate results from all web content processes in getLoadedSubresourceDomains.
 - Use the main frame's security origin instead of its URL to filter subresource domains, since
   remote frame URLs are not available.
 - Only clear loadedSubresourceDomains on main frame commits, since this is page-level data meant to
   track which third-party domains a page loaded.
 - Wait for subframe loads to complete before checking domains, since they will not load instantly
   with the back-forward cache disabled.

Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/ResourceLoadStatistics.mm

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::getLoadedSubresourceDomains):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didCommitLoad):
(WebKit::WebPage::didLoadFromRegistrableDomain):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/ResourceLoadStatistics.mm:
(TEST(ResourceLoadStatistics, BackForwardPerPageData)):

Canonical link: https://commits.webkit.org/313192@main